# 3D_Chess

./: CMakeLists.txt  copyResources.ps1
Resources/: resources.json  scene.json
Resources/models/: board.blend  board.blend1  board.mtl  tower.blend  tower.blend1
Resources/shaders/: colored_mesh.frag  mesh.geom  mesh.vert  textured_mesh.frag
include/: Camera.hpp  EventDispatcher.hpp  GameRenderer.hpp  GameWindow.hpp  Geometry.hpp  Material.hpp  Mesh.hpp  ObjLoader.hpp  Texture.hpp  Vertex.hpp
include/Components/: CameraComponent.hpp  Components.hpp  MeshComponent.hpp  TransformationComponent.hpp
include/Events/: Events.hpp
include/Rendering/: GameWindow.hpp  Light.hpp
include/Resources/: Material.hpp  ResourceManager.hpp  Shader.hpp
include/Systems/: GameRenderSystem.hpp  InputSystem.hpp  System.hpp
include/Utility/: ObjLoader.hpp  SceneLoader.hpp  Utility.hpp
src/: 3DChess.cpp  Camera.cpp  EventDispatcher.cpp  Events.cpp  GameRenderer.cpp  GameWindow.cpp  Geometry.cpp  Material.cpp  Mesh.cpp  ObjLoader.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
src/Components/: CameraComponent.cpp  MeshComponent.cpp
src/Events/: EventDispatcher.cpp  Events.cpp
src/Rendering/: GameWindow.cpp
src/Resources/: Geometry.cpp  Material.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
src/Systems/: GameRenderSystem.cpp  InputSystem.cpp
src/Utility/: ObjLoader.cpp  SceneLoader.cpp  Utility.cpp
